criação do header e adição do sass ao projeto

--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Portfolio Filipe Marques</title>
   <!--Css Style-->
-  <link rel="stylesheet" href="./style/index.css">
+  <link rel="stylesheet" href="./style/css/index.css">
 </head>
 <body>
   <header class="header">
-    <img src="" alt="perfil">
+    <img src="./img/marca.svg" alt="perfil">
     <nav>
       <ul class="header-menu">
         <li>
