--- a/index.html
+++ b/index.html
@@ -9,16 +9,48 @@
 </head>
 <body>
   <header class="header">
-    <img src="./img/marca.svg" alt="perfil">
+    <img src="./img/marca.svg" alt="logo">
     <nav>
       <ul class="header-menu">
         <li>
           <a href="#experiencia">Experiência</a>
+        </li>
+        <li>
           <a href="#formacao">Formação</a>
+        </li>
+        <li>
           <a href="#contato">Contato</a>
         </li>
       </ul>
     </nav>
   </header>
+  <main class="introducao">
+    <img src="./img/perfil.jpg" alt="Imagem de Perfil">
+    <div class="">
+      <h1>Desenvolvedor <br> Fullstack <br> & Ui Designer</h1>
+      <p>Filipe Marques - Salvador/BA</p>
+    </div>
+  </main>
+  <section aria-label="experiencia" class="experiencia" id="experiencia">
+    <h2 class="subtitulo">Experiência</h2>
+    <div>
+      <p class="xp-text">Desenvolvedor Fullstack com mais de 1 ano de epxeriência em projetos Web. Atuo no desenvolvimento de landing pages utilizando <strong>HTML</strong>,<strong>CSS</strong> e <strong>JavaScript</strong>. Tenho experiência e sou capaz de desenvolver micro-serviços com <strong>Node</strong> e <strong>Django</strong>.</p>
+
+      <div class="empresa">
+        <span class="empresa-ano">07/2022 - Atual</span>
+        <h3 class="empresa-titulo">Novadata</h3>
+        <span class="empresa-titulo">Desenvolvedor Júnior</span>
+        <p class="empresa-texto">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsa nam facere officia eos culpa libero eaque incidunt pariatur quis ad?</p>
+        <ul class="empresa-habilidades">
+          <li>HTML</li>
+          <li>CSS</li>
+          <li>JavaScript</li>
+          <li>TailWindCss</li>
+          <li>Sass</li>
+          <li>Django</li>
+        </ul>
+      </div>
+    </div>
+  </section>
 </body>
 </html>
