criação do formação, modo dark, modificações no css global e nova foto de perfil

--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Portfolio Filipe Marques</title>
-  <!--Css Style-->
+  <!--Css Style - Se você remover o css e o site continuar tendo site sua estrutura é semântica-->
   <link rel="stylesheet" href="./style/css/index.css">
 </head>
 <body>
   <header class="header">
-    <img src="./img/marca.svg" alt="logo">
+    <img src="./img/logo.svg" alt="logo">
     <nav>
       <ul class="header-menu">
         <li>
@@ -26,7 +26,7 @@
   </header>
   <main class="introducao">
     <img src="./img/perfil.jpg" alt="Imagem de Perfil">
-    <div class="">
+    <div>
       <h1>Desenvolvedor <br> Fullstack <br> & Ui Designer</h1>
       <p>Filipe Marques - Salvador/BA</p>
     </div>
@@ -49,6 +49,37 @@
           <li>Sass</li>
           <li>Django</li>
         </ul>
+      </div>
+    </div>
+  </section>
+  <section aria-label="formacao" class="formacao" id="formacao">
+    <div class="formacao-container">
+      <h2 class="subtitulo">Formação</h2>
+      <div>
+        <p class="formacao-texto">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed assumenda iste doloremque, pariatur ducimus officia vitae aspernatur sint numquam quidem? 
+        </p>
+        <ul class="faculdade">
+          <li class="faculdade-item">
+            <span class="faculdade-tipo">Graduação</span>
+            <h3 class="faculdade-curso">Eng. da Computação</h3>
+            <span class="faculdade-instituicao">Unijorge</span>
+          </li>
+        </ul>
+        <div class="formacao-extra">
+          <div class="cursos">
+            <h3>Cursos Intensivos</h3>
+            <ul>
+              <li>Front End para Iniciantes <span>56 horas</span></li>
+            </ul>
+          </div>
+          <div class="idiomas">
+            <h3>Idiomas</h3>
+            <ul>
+              <li>Inglês/ <span>Iniciante</span></li>
+            </ul>
+          </div>
+        </div>
       </div>
     </div>
   </section>
