--- a/index.html
+++ b/index.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Portfolio Filipe Marques</title>
   <!--Css Style - Se você remover o css e o site continuar tendo site sua estrutura é semântica-->
   <link rel="stylesheet" href="./style/css/index.css">
+  <!--Email Js Services-->
+  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
+  <script src="./email.js"></script>
 </head>
 <body>
   <header class="header">
@@ -34,13 +38,17 @@
   <section aria-label="experiencia" class="experiencia" id="experiencia">
     <h2 class="subtitulo">Experiência</h2>
     <div>
-      <p class="xp-text">Desenvolvedor Fullstack com mais de 1 ano de epxeriência em projetos Web. Atuo no desenvolvimento de landing pages utilizando <strong>HTML</strong>,<strong>CSS</strong> e <strong>JavaScript</strong>. Tenho experiência e sou capaz de desenvolver micro-serviços com <strong>Node</strong> e <strong>Django</strong>.</p>
+      <p class="xp-text">Desenvolvedor Fullstack com mais de 1 ano de epxeriência em projetos Web. Atuo no
+        desenvolvimento de landing pages utilizando <strong>HTML</strong>,<strong>CSS</strong> e
+        <strong>JavaScript</strong>. Tenho experiência e sou capaz de desenvolver micro-serviços com
+        <strong>Node</strong> e <strong>Django</strong>.</p>
 
       <div class="empresa">
         <span class="empresa-ano">07/2022 - Atual</span>
         <h3 class="empresa-titulo">Novadata</h3>
         <span class="empresa-titulo">Desenvolvedor Júnior</span>
-        <p class="empresa-texto">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsa nam facere officia eos culpa libero eaque incidunt pariatur quis ad?</p>
+        <p class="empresa-texto">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsa nam facere officia eos
+          culpa libero eaque incidunt pariatur quis ad?</p>
         <ul class="empresa-habilidades">
           <li>HTML</li>
           <li>CSS</li>
@@ -57,7 +65,8 @@
       <h2 class="subtitulo">Formação</h2>
       <div>
         <p class="formacao-texto">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed assumenda iste doloremque, pariatur ducimus officia vitae aspernatur sint numquam quidem? 
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed assumenda iste doloremque, pariatur ducimus
+          officia vitae aspernatur sint numquam quidem?
         </p>
         <ul class="faculdade">
           <li class="faculdade-item">
@@ -83,5 +92,22 @@
       </div>
     </div>
   </section>
+  <footer class="footer" id="footer" aria-label="footer">
+    <div class="footer-container">
+      <p class="footer-texto">
+        Estou disponível para atuar em novos projetos no momento! Entre em contato para agendarmos uma conversa!
+      </p>
+      <form contact-form>
+        <label for="user_name">Name</label>
+        <input type="text" id="user_name" name="user_name">
+        <label for="user_email">Email</label>
+        <input type="email" id="user_email" name="user_email">
+        <label for="user_msg">Message</label>
+        <textarea name="message" id="user_msg" name="user_msg"></textarea>
+        <button type="submit">Send</button>
+      </form>
+    </div>
+  </footer>
 </body>
+
 </html>
