--- a/index.html
+++ b/index.html
@@ -92,20 +92,28 @@
       </div>
     </div>
   </section>
-  <footer class="footer" id="footer" aria-label="footer">
-    <div class="footer-container">
-      <p class="footer-texto">
-        Estou disponível para atuar em novos projetos no momento! Entre em contato para agendarmos uma conversa!
-      </p>
-      <form contact-form>
+  <section class="contato" id="contato" aria-label="contato">
+    <h2 class="subtitulo">Contato</h2>
+    <div>
+      <p class="contato-text">Estou disponível para atuar em novos projetos no momento! Entre em contato para agendarmos uma conversa!</p>
+      <form class="contact" contact-form>
         <label for="user_name">Name</label>
         <input type="text" id="user_name" name="user_name">
         <label for="user_email">Email</label>
         <input type="email" id="user_email" name="user_email">
         <label for="user_msg">Message</label>
         <textarea name="message" id="user_msg" name="user_msg"></textarea>
-        <button type="submit">Send</button>
+        <button type="submit" class="btn">Send</button>
       </form>
+    </div>
+
+  </section>
+  <footer class="footer" id="footer" aria-label="footer">
+    <div class="footer-container">
+      <p class="footer-texto">
+        
+      </p>
+      
     </div>
   </footer>
 </body>
